Fetch more data from gios api
