# gios-data/src/main/java/gios_data/domain/model/Sensor.java
@@ -18,7 +18,9 @@ public class Sensor {
     @DBRef
     private Param param;
 
+    private Integer stationId;
+
     @DBRef
-    private List<AirQualityValue> values;
+    private List<Measurement> values;
 
 }
